feat: Added starter files

--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SrediKucu</title>
+    <title>My Website Home Page</title>
 </head>
 
 <body>
-    <h1>Hello World</h1>
-
+    <h1>Welcome to my website</h1>
+    <p>Now hosted on Amazon S3!</p>
 </body>
 
 </html>
