feat: Added first blog

--- a/dvoriste.html
+++ b/dvoriste.html
@@ -13,7 +13,7 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SrediKucu - Saveti za uređenje Vašeg doma</title>
+    <title>SrediKucu - Dvorište</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,14 +22,14 @@
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
     <meta name="description"
-        content="Blog sredikucu.rs nudi praktične savete za uređenje vašeg doma, kuće ili stana. Sve za kuću, enterijer ideje, izdavanje, opremanje sve na SrediKucu">
+        content="Blog sredikucu.rs pomaže čitaocima da urede svoje dvorište na idealan način. Svi članci sa savetima za uređenje eksterijera kuće i dvorišta na jednom mestu">
     </meta>
-    <meta property="og:title" content="SrediKucu - Saveti za uređenje Vašeg doma" />
+    <meta property="og:title" content="SrediKucu - Dvorište" />
     <meta property="og:description"
-        content="Blog sredikucu.rs nudi praktične savete za uređenje vašeg doma, kuće ili stana. Sve za kuću, enterijer ideje, izdavanje, opremanje sve na SrediKucu" />
+        content="Blog sredikucu.rs pomaže čitaocima da urede svoje dvorište na idealan način. Svi članci sa savetima za uređenje eksterijera kuće i dvorišta na jednom mestu" />
     <meta property="og:site_name" content="SrediKucu" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.sredikucu.rs/" />
+    <meta property="og:url" content="https://www.sredikucu.rs/dvoriste.html" />
     <!-- <meta property="og:image" content="https://www.sredikucu.rs/images/logo.png" /> -->
 </head>
 
@@ -52,22 +52,7 @@
         </div>
     </nav>
     <main class="blog archive">
-        <div class="related-xxl">
-            <strong>10 zlatnih pravila za opremanje doma</strong>
-            <div class="meta">
-                <span>Ažuriran 21 Jula, 2023</span>
-                <span>sredikucu.rs</span>
-                <span>Novo</span>
-            </div>
-            <img src="images/10-zlatnih-pravila-za-opremanje-doma-naslovna.webp" decoding="async"
-                alt="Primer 10 zlatnih pravila za opremanje doma">
-            <p>
-                Vaš dom je vaše utočište, zato se pobrinite da je mesto u koje volite da dolazite. Bilo da ste tek
-                počeli ili tražite način da osvežite svoj trenutni enterijer, ovih 10 zlatnih pravila će vam pomoći da
-                kreirate prostor koji je i elegantan i funkcionalan.
-            </p>
-            <a class="main-button" href="10-zlatnih-pravila-za-opremanje-doma.html">Pročitaj članak</a>
-        </div>
+        <strong class="categorie">Dvorište</strong>
 
     </main>
     <footer class="author-box">
