--- a/kuca.html
+++ b/kuca.html
@@ -13,7 +13,7 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SrediKucu - Saveti za uređenje Vašeg doma</title>
+    <title>SrediKucu - Kuća</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,14 +22,14 @@
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
     <meta name="description"
-        content="Blog sredikucu.rs nudi praktične savete za uređenje vašeg doma, kuće ili stana. Sve za kuću, enterijer ideje, izdavanje, opremanje sve na SrediKucu">
+        content="Blog sredikucu.rs pomaže čitaocima da urede svoju kuću na idealan način. Pogledajte sve članke vezane za savete za uređenje odabir nameštaja i enterijera kuće">
     </meta>
-    <meta property="og:title" content="SrediKucu - Saveti za uređenje Vašeg doma" />
+    <meta property="og:title" content="SrediKucu - Kuća" />
     <meta property="og:description"
-        content="Blog sredikucu.rs nudi praktične savete za uređenje vašeg doma, kuće ili stana. Sve za kuću, enterijer ideje, izdavanje, opremanje sve na SrediKucu" />
+        content="Blog sredikucu.rs pomaže čitaocima da urede svoju kuću na idealan način. Pogledajte sve članke vezane za savete za uređenje odabir nameštaja i enterijera kuće" />
     <meta property="og:site_name" content="SrediKucu" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.sredikucu.rs/" />
+    <meta property="og:url" content="https://www.sredikucu.rs/kuca.html" />
     <!-- <meta property="og:image" content="https://www.sredikucu.rs/images/logo.png" /> -->
 </head>
 
@@ -52,6 +52,7 @@
         </div>
     </nav>
     <main class="blog archive">
+        <strong class="categorie">Kuća</strong>
         <div class="related-xxl">
             <strong>10 zlatnih pravila za opremanje doma</strong>
             <div class="meta">
