--- a/dvoriste.html
+++ b/dvoriste.html
@@ -35,20 +35,37 @@
 
 <body>
     <nav>
-        <div class="logo-container">
-            <a href="index.html">
-                <img src="images/sredikucu_logo.webp" decoding="async" loading="lazy" alt="sredikucu.rs logo">
-            </a>
-        </div>
-        <div class="categories">
-            <p>
-                <a href="kuca.html">Kuća</a>
-                <a href="stan.html">Stan</a>
-                <a href="dvoriste.html">Dvorište</a>
-                <a class="call-button" href="kontakt.html">
-                    Kontakt
+        <div class="nav-desktop">
+            <div class="logo-container">
+                <a href="index.html">
+                    <img width="150px" height="89.57px" src="images/sredikucu_logo.webp" decoding="async" loading="lazy"
+                        alt="sredikucu.rs logo">
                 </a>
-            </p>
+            </div>
+            <div class="categories">
+                <p>
+                    <a href="kuca.html">Kuća</a>
+                    <a href="stan.html">Stan</a>
+                    <a href="dvoriste.html">Dvorište</a>
+                    <a class="call-button" href="kontakt.html">
+                        Kontakt
+                    </a>
+                </p>
+            </div>
+        </div>
+        <div id="menuToggle" class="nav-mobile">
+            <input type="checkbox" />
+            <span></span>
+            <span></span>
+            <span></span>
+            <ul id="menu">
+                <li><a href="kuca.html">Kuća</a></li>
+                <li><a href="stan.html">Stan</a></li>
+                <li><a href="dvoriste.html">Dvorište</a></li>
+                <li><a class="call-button" href="kontakt.html">
+                        Kontakt
+                    </a></li>
+            </ul>
         </div>
     </nav>
     <main class="blog archive">
@@ -58,8 +75,8 @@
     <footer class="author-box">
         <div class="grid-container">
             <div>
-                <img class="avatar" src="./images/sredikucu_mala_kuca.webp" decoding="async" loading="lazy"
-                    alt="Sredi Kucu avatar" />
+                <img width="130px" height="130px" class="avatar" src="./images/sredikucu_mala_kuca.webp"
+                    decoding="async" loading="lazy" alt="Sredi Kucu avatar" />
             </div>
             <h3 class="author-title">Hej, ovde SrediKucu.rs</h3>
             <div>
