--- a/index.html
+++ b/index.html
@@ -35,23 +35,41 @@
 
 <body>
     <nav>
-        <div class="logo-container">
-            <a href="index.html">
-                <img src="images/sredikucu_logo.webp" decoding="async" loading="lazy" alt="sredikucu.rs logo">
-            </a>
-        </div>
-        <div class="categories">
-            <p>
-                <a href="kuca.html">Kuća</a>
-                <a href="stan.html">Stan</a>
-                <a href="dvoriste.html">Dvorište</a>
-                <a class="call-button" href="kontakt.html">
-                    Kontakt
+        <div class="nav-desktop">
+            <div class="logo-container">
+                <a href="index.html">
+                    <img width="150px" height="89.57px" src="images/sredikucu_logo.webp" decoding="async" loading="lazy"
+                        alt="sredikucu.rs logo">
                 </a>
-            </p>
+            </div>
+            <div class="categories">
+                <p>
+                    <a href="kuca.html">Kuća</a>
+                    <a href="stan.html">Stan</a>
+                    <a href="dvoriste.html">Dvorište</a>
+                    <a class="call-button" href="kontakt.html">
+                        Kontakt
+                    </a>
+                </p>
+            </div>
+        </div>
+        <div id="menuToggle" class="nav-mobile">
+            <input type="checkbox" />
+            <span></span>
+            <span></span>
+            <span></span>
+            <ul id="menu">
+                <li><a href="kuca.html">Kuća</a></li>
+                <li><a href="stan.html">Stan</a></li>
+                <li><a href="dvoriste.html">Dvorište</a></li>
+                <li><a class="call-button" href="kontakt.html">
+                        Kontakt
+                    </a></li>
+            </ul>
         </div>
     </nav>
     <main class="blog archive">
+        <!-- 1 -->
         <div class="related-xxl">
             <strong>10 zlatnih pravila za opremanje doma</strong>
             <div class="meta">
@@ -69,12 +87,30 @@
             <a class="main-button" href="10-zlatnih-pravila-za-opremanje-doma.html">Pročitaj članak</a>
         </div>
 
+        <!-- 2 -->
+        <div class="related-xxl">
+            <strong>Najbolji vodič za renoviranje kupatila u 2023. godini</strong>
+            <div class="meta">
+                <span>Ažuriran 21 Jula, 2023</span>
+                <span>sredikucu.rs</span>
+                <span>Kupatila</span>
+            </div>
+            <img src="images/vodic-za-renoviranje-kupatila-u-2023-godini-naslovna.webp" decoding="async" loading="lazy"
+                alt="Vodic za renoviranje kupatila u 2023. godini za pocetnike">
+            <p>
+                Kupatilo predstavlja jednu od najvažnijih prostorija u našem domu - mesto gde se
+                opuštamo, umivamo i pripremamo za novi dan. Ukoliko je vaše kupatilo dotrajalo ili
+                jednostavno ne zadovoljava vaše potrebe, možda je vreme za renoviranje.
+            </p>
+            <a class="main-button" href="vodic-za-renoviranje-kupatila-u-2023-godini.html">Pročitaj članak</a>
+        </div>
+
     </main>
     <footer class="author-box">
         <div class="grid-container">
             <div>
-                <img class="avatar" src="./images/sredikucu_mala_kuca.webp" decoding="async" loading="lazy"
-                    alt="Sredi Kucu avatar" />
+                <img width="130px" height="130px" class="avatar" src="./images/sredikucu_mala_kuca.webp"
+                    decoding="async" loading="lazy" alt="Sredi Kucu avatar" />
             </div>
             <h3 class="author-title">Hej, ovde SrediKucu.rs</h3>
             <div>
