fix: Related articles link

--- a/10-zlatnih-pravila-za-opremanje-doma.html
+++ b/10-zlatnih-pravila-za-opremanje-doma.html
@@ -787,10 +787,50 @@
                         decoding="async"
                         alt="Vodic za renoviranje kupatila u 2023. godini za pocetnike za nastavak citanja">
                     <div>
-                        <strong>Vodič za renoviranje kupatila u 2023. godini</strong>
+                        <strong><a href="vodic-za-renoviranje-kupatila-u-2023-godini.html">Vodič za renoviranje kupatila
+                                u 2023. godini</a></strong>
                         <p>
                             Kupatilo predstavlja jednu od najvažnijih prostorija u našem domu - mesto gde se
                             opuštamo, umivamo i pripremamo za novi dan.
+                        </p>
+                    </div>
+                </div>
+                <div class="related-m">
+                    <img src="images/kako-pravilno-opremiti-svoj-dom-naslovna.webp" loading="lazy" decoding="async"
+                        alt="Kako pravilno opremiti svoj dom za nastavak citanja">
+                    <div>
+                        <strong><a href="kako-pravilno-opremiti-svoj-dom.html">Kako pravilno opremiti svoj
+                                dom</a></strong>
+                        <p>
+                            Opremanje doma predstavlja ključan korak u stvaranju savršene oaze za vas i vašu
+                            porodicu.
+                        </p>
+                    </div>
+                </div>
+                <div class="related-m">
+                    <img src="images/sve-sto-treba-da-znate-o-pripremi-stana-za-iznajmljivanje-naslovna.webp"
+                        loading="lazy" decoding="async" alt="Sve što treba da znate o pripremi stana
+                        za iznajmljivanje za nastavak citanja">
+                    <div>
+                        <strong><a href="sve-sto-treba-da-znate-o-pripremi-stana-za-iznajmljivanje.html">Sve što treba
+                                da znate o
+                                pripremi stana
+                                za iznajmljivanje</a></strong>
+                        <p>
+                            Priprema stana za iznajmljivanje predstavlja važan korak u procesu iznajmljivanja.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="related-m">
+                    <img src="images/kako-da-kreirate-udoban-i-prijatan-dnevni-boravak-naslovna.webp" loading="lazy"
+                        decoding="async" alt="Kako da kreirate udoban i prijatan dnevni boravak za nastavak citanja">
+                    <div>
+                        <strong><a href="kako-da-kreirate-udoban-i-prijatan-dnevni-boravak.html">Kako da
+                                kreirate udoban i prijatan dnevni boravak</a></strong>
+                        <p>
+                            Dnevni boravak predstavlja srce svakog doma - mesto gde se okupljamo sa porodicom i
+                            prijateljima, gde se opuštamo i uživamo u slobodnom vremenu.
                         </p>
                     </div>
                 </div>
