--- a/index.html
+++ b/index.html
@@ -69,6 +69,28 @@
         </div>
     </nav>
     <main class="blog archive">
+
+        <!-- 0 -->
+        <div class="related-xxl">
+            <strong>Sve što treba da znate o pripremi stana
+                za iznajmljivanje</strong>
+            <div class="meta">
+                <span>Ažuriran 21 Jula, 2023</span>
+                <span>sredikucu.rs</span>
+                <span>Stan</span>
+            </div>
+            <img src="images/sve-sto-treba-da-znate-o-pripremi-stana-za-iznajmljivanje-naslovna.webp" decoding="async"
+                alt="Sve što treba da znate o pripremi stana za iznajmljivanje">
+            <p>
+                Priprema stana za iznajmljivanje predstavlja važan korak u procesu iznajmljivanja. Stan
+                koji je uredan, lepo uređen i čist privući će veći broj potencijalnih stanara, što će
+                rezultirati bržim iznajmljivanjem i boljom cenom.
+            </p>
+            <a class="main-button" href="sve-sto-treba-da-znate-o-pripremi-stana-za-iznajmljivanje.html">Pročitaj
+                članak</a>
+        </div>
+
+
         <!-- 1 -->
         <div class="related-xxl">
             <strong>10 zlatnih pravila za opremanje doma</strong>
@@ -105,6 +127,49 @@
             <a class="main-button" href="vodic-za-renoviranje-kupatila-u-2023-godini.html">Pročitaj članak</a>
         </div>
 
+        <!-- 3 -->
+        <div class="related-xxl">
+            <strong>Kako da kreirate udoban i prijatan dnevni boravak</strong>
+            <div class="meta">
+                <span>Ažuriran 20 Jula, 2023</span>
+                <span>sredikucu.rs</span>
+                <span>Dnevni boravak</span>
+            </div>
+            <img src="images/kako-da-kreirate-udoban-i-prijatan-dnevni-boravak-naslovna.webp" decoding="async"
+                loading="lazy" alt="Kako da kreirate udoban i prijatan dnevni boravak">
+            <p>
+                Dnevni boravak predstavlja srce svakog doma - mesto gde se okupljamo sa porodicom i
+                prijateljima, gde se opuštamo i uživamo u slobodnom vremenu. Zbog toga je od
+                izuzetne važnosti da naš dnevni boravak bude ispunjen udobnošću i prijatnom
+                atmosferom.
+            </p>
+            <a class="main-button" href="kako-da-kreirate-udoban-i-prijatan-dnevni-boravak.html">Pročitaj članak</a>
+        </div>
+
+        <!-- 4 -->
+
+        <div class="related-xxl">
+            <strong>Kako pravilno opremiti svoj dom</strong>
+            <div class="meta">
+                <span>Ažuriran 18 Jula, 2023</span>
+                <span>sredikucu.rs</span>
+                <span>Novo</span>
+            </div>
+            <img src="images/kako-pravilno-opremiti-svoj-dom-naslovna.webp" decoding="async" loading="lazy"
+                alt="Kako pravilno opremiti svoj dom">
+            <p>
+                Opremanje doma predstavlja ključan korak u stvaranju savršene oaze za vas i vašu
+                porodicu. No, bez adekvatnog plana, postoji rizik da propustite važne detalje ili
+                premašite budžet. U ovom blog postu, podelićemo korisne savete kako pravilno
+                isplanirati opremanje doma, odabrati pravi nameštaj koji odgovara vašem stilu i
+                budžetu, kao i kreativno urediti prostor kako biste dobili udobno i funkcionalno
+                okruženje.
+            </p>
+            <a class="main-button" href="kako-pravilno-opremiti-svoj-dom.html">Pročitaj članak</a>
+        </div>
+
+        <!-- 5 -->
+
     </main>
     <footer class="author-box">
         <div class="grid-container">
@@ -126,6 +191,8 @@
             </div>
         </div>
     </footer>
+
+    <script src="scripts/app.js"></script>
 </body>
 
 </html>
