--- a/vodic-za-renoviranje-kupatila-u-2023-godini.html
+++ b/vodic-za-renoviranje-kupatila-u-2023-godini.html
@@ -70,7 +70,7 @@
     </nav>
     <main>
         <div class="spacer-10"></div>
-        <article class="blog" id="10-zlatnih-pravila-za-opremanje-doma" role="article">
+        <article class="blog" id="vodic-za-renoviranje-kupatila-u-2023-godini" role="article">
             <h1>Najbolji vodič za renoviranje kupatila u 2023. godini</h1>
             <div class="meta">
                 <span>Ažuriran 21 Jula, 2023</span>
@@ -134,6 +134,12 @@
                 <img src="images/vodic-za-renoviranje-kupatila-u-2023-godini-1.webp" decoding="async" loading="lazy"
                     alt="Planiranje renoviranja kupatila">
             </div>
+            <p>Pre nego što nastavimo sa najboljim praksama prilikom uređenja kupatila, pogledajte oko sebe, da li
+                smatrate da bi bilo korisno srediti i neke druge prostorije u vašem domu u bliskoj budućnosti. Izdvojili
+                smo za vas 10 pravila koje treba da poznajete ukoliko planirate bilo kakvo uređenje doma. To su najbolje
+                prake i osnovni koncepti na kojima se sve dalje zasniva. Pročitajte više na <a
+                    href="10-zlatnih-pravila-za-opremanje-doma.html">10 zlatnih pravila za opremanje doma</a>, no gde
+                smo stali? A da...</p>
             <p>
                 Nakon što ste razmotrili svoje potrebe, trebalo bi da napravite budžet. Renoviranje
                 kupatila može biti prilično skupo, stoga je bitno da planirate unapred. Razmislite o svoti
@@ -410,12 +416,26 @@
             <section class="read-more">
                 <h3>Povezani članci:</h3>
                 <div class="related-m">
-                    <img src="images/10-zlatnih-pravila-za-opremanje-doma-naslovna.webp" loading="lazy" decoding="async"
-                        alt="Opremanje doma 10 zlatnih pravila za nastavak citanja">
+                    <img src="images/kako-pravilno-opremiti-svoj-dom-naslovna.webp" loading="lazy" decoding="async"
+                        alt="Kako pravilno opremiti svoj dom za nastavak citanja">
                     <div>
-                        <strong>10 zlatnih pravila za opremanje doma</strong>
+                        <strong><a href="kako-pravilno-opremiti-svoj-dom.html">Kako pravilno opremiti svoj
+                                dom</a></strong>
                         <p>
-                            Vaš dom je vaše utočište, zato se pobrinite da je mesto u koje volite da dolazite.
+                            Opremanje doma predstavlja ključan korak u stvaranju savršene oaze za vas i vašu
+                            porodicu.
+                        </p>
+                    </div>
+                </div>
+                <div class="related-m">
+                    <img src="images/kako-da-kreirate-udoban-i-prijatan-dnevni-boravak-naslovna.webp" loading="lazy"
+                        decoding="async" alt="Kako da kreirate udoban i prijatan dnevni boravak za nastavak citanja">
+                    <div>
+                        <strong><a href="kako-da-kreirate-udoban-i-prijatan-dnevni-boravak.html">Kako da
+                                kreirate udoban i prijatan dnevni boravak</a></strong>
+                        <p>
+                            Dnevni boravak predstavlja srce svakog doma - mesto gde se okupljamo sa porodicom i
+                            prijateljima, gde se opuštamo i uživamo u slobodnom vremenu.
                         </p>
                     </div>
                 </div>
