--- a/kuca.html
+++ b/kuca.html
@@ -70,6 +70,8 @@
     </nav>
     <main class="blog archive">
         <strong class="categorie">Kuća</strong>
+
+        <!-- 1 -->
         <div class="related-xxl">
             <strong>10 zlatnih pravila za opremanje doma</strong>
             <div class="meta">
@@ -85,6 +87,65 @@
                 kreirate prostor koji je i elegantan i funkcionalan.
             </p>
             <a class="main-button" href="10-zlatnih-pravila-za-opremanje-doma.html">Pročitaj članak</a>
+        </div>
+
+        <!-- 2 -->
+        <div class="related-xxl">
+            <strong>Najbolji vodič za renoviranje kupatila u 2023. godini</strong>
+            <div class="meta">
+                <span>Ažuriran 21 Jula, 2023</span>
+                <span>sredikucu.rs</span>
+                <span>Kupatila</span>
+            </div>
+            <img src="images/vodic-za-renoviranje-kupatila-u-2023-godini-naslovna.webp" decoding="async" loading="lazy"
+                alt="Vodic za renoviranje kupatila u 2023. godini za pocetnike">
+            <p>
+                Kupatilo predstavlja jednu od najvažnijih prostorija u našem domu - mesto gde se
+                opuštamo, umivamo i pripremamo za novi dan. Ukoliko je vaše kupatilo dotrajalo ili
+                jednostavno ne zadovoljava vaše potrebe, možda je vreme za renoviranje.
+            </p>
+            <a class="main-button" href="vodic-za-renoviranje-kupatila-u-2023-godini.html">Pročitaj članak</a>
+        </div>
+
+        <!-- 3 -->
+        <div class="related-xxl">
+            <strong>Kako da kreirate udoban i prijatan dnevni boravak</strong>
+            <div class="meta">
+                <span>Ažuriran 20 Jula, 2023</span>
+                <span>sredikucu.rs</span>
+                <span>Dnevni boravak</span>
+            </div>
+            <img src="images/kako-da-kreirate-udoban-i-prijatan-dnevni-boravak-naslovna.webp" decoding="async"
+                loading="lazy" alt="Kako da kreirate udoban i prijatan dnevni boravak">
+            <p>
+                Dnevni boravak predstavlja srce svakog doma - mesto gde se okupljamo sa porodicom i
+                prijateljima, gde se opuštamo i uživamo u slobodnom vremenu. Zbog toga je od
+                izuzetne važnosti da naš dnevni boravak bude ispunjen udobnošću i prijatnom
+                atmosferom.
+            </p>
+            <a class="main-button" href="kako-da-kreirate-udoban-i-prijatan-dnevni-boravak.html">Pročitaj članak</a>
+        </div>
+
+        <!-- 4 -->
+
+        <div class="related-xxl">
+            <strong>Kako pravilno opremiti svoj dom</strong>
+            <div class="meta">
+                <span>Ažuriran 18 Jula, 2023</span>
+                <span>sredikucu.rs</span>
+                <span>Novo</span>
+            </div>
+            <img src="images/kako-pravilno-opremiti-svoj-dom-naslovna.webp" decoding="async" loading="lazy"
+                alt="Kako pravilno opremiti svoj dom">
+            <p>
+                Opremanje doma predstavlja ključan korak u stvaranju savršene oaze za vas i vašu
+                porodicu. No, bez adekvatnog plana, postoji rizik da propustite važne detalje ili
+                premašite budžet. U ovom blog postu, podelićemo korisne savete kako pravilno
+                isplanirati opremanje doma, odabrati pravi nameštaj koji odgovara vašem stilu i
+                budžetu, kao i kreativno urediti prostor kako biste dobili udobno i funkcionalno
+                okruženje.
+            </p>
+            <a class="main-button" href="kako-pravilno-opremiti-svoj-dom.html">Pročitaj članak</a>
         </div>
 
     </main>
