--- a/index.html
+++ b/index.html
@@ -147,7 +147,6 @@
         </div>
 
         <!-- 4 -->
-
         <div class="related-xxl">
             <strong>Kako pravilno opremiti svoj dom</strong>
             <div class="meta">
@@ -169,6 +168,65 @@
         </div>
 
         <!-- 5 -->
+        <div class="related-xxl">
+            <strong>Ideje za uređenje dvorišta</strong>
+            <div class="meta">
+                <span>Ažuriran 17 Jula, 2023</span>
+                <span>sredikucu.rs</span>
+                <span>Dvorište</span>
+            </div>
+            <img src="images/ideje-za-uredjenje-dvorista-naslovna.webp" decoding="async" loading="lazy"
+                alt="Ideje za uređenje dvorišta">
+            <p>
+                Dvorište je značajan deo svakog doma. Predstavlja prostor u kojem možete uživati,
+                opustiti se sa porodicom i prijateljima, ili se jednostavno prepustiti lepoti prirode.
+                Uređenje dvorišta može biti izazovan, ali kreativan proces. S malo truda, stvorite prostor
+                koji će vas oduševiti i pružiti vam ugodnost tokom boravka.
+            </p>
+            <a class="main-button" href="ideje-za-uredjenje-dvorista.html">Pročitaj članak</a>
+        </div>
+
+        <!-- 6 -->
+        <div class="related-xxl">
+            <strong>Obezbeđenje objekta: Kako zaštititi vaš dom</strong>
+            <div class="meta">
+                <span>Ažuriran 15 Jula, 2023</span>
+                <span>sredikucu.rs</span>
+                <span>Kuća</span>
+            </div>
+            <img src="images/obezbedjenje-objekta-kako-zastititi-vas-dom-naslovna.webp" decoding="async" loading="lazy"
+                alt="Obezbeđenje objekta: Kako zaštititi vaš dom sve što treba da znate">
+            <p>
+                Bezbednost doma je od suštinskog značaja za sve nas. Osećaj sigurnosti u sopstvenom domu je osnovni
+                uslov za miran i zadovoljan život. U ovom blogu istražujemo ključne metode i savete kako biste osigurali
+                vaš dom i zaštitili ga od potencijalnih pretnji.
+            </p>
+            <a class="main-button" href="obezbedjenje-objekta-kako-zastititi-vas-dom.html">Pročitaj članak</a>
+        </div>
+
+        <!-- 7 -->
+        <div class="related-xxl">
+            <strong>Kako opremiti garsonjeru</strong>
+            <div class="meta">
+                <span>Ažuriran 14 Jula, 2023</span>
+                <span>sredikucu.rs</span>
+                <span>Stan</span>
+            </div>
+            <img src="images/kako-opremiti-garsonjeru-naslovna.webp" decoding="async" loading="lazy"
+                alt="Kako opremiti garsonjeru">
+            <p>
+                Uređenje garsonjere može biti izazovan zadatak, ali uz pažljivo planiranje i kreativnost,
+                mali prostor možete pretvoriti u udoban i funkcionalan dom. Kako biste postigli
+                optimalan raspored nameštaja, važno je pažljivo izmeriti prostor i razmotriti vertikalni
+                prostor. Odabir multifunkcionalnog i estetski privlačnog nameštaja prilagođenog vašem
+                stilu života ključan je korak ka stvaranju idealnog okruženja. Dodavanjem ličnih dodira i
+                pažljivim dekorisanjem, vaša garsonjera će postati jedinstvena oaza koja odiše toplinom
+                i udobnošću.
+            </p>
+            <a class="main-button" href="kako-opremiti-garsonjeru.html">Pročitaj članak</a>
+        </div>
+
+        <!-- 8 -->
 
     </main>
     <footer class="author-box">
