--- a/kako-da-kreirate-udoban-i-prijatan-dnevni-boravak.html
+++ b/kako-da-kreirate-udoban-i-prijatan-dnevni-boravak.html
@@ -382,7 +382,7 @@
 
             <section class="read-more">
                 <h3>Povezani članci:</h3>
-                <div class="related-m">
+                <div class="related-xl">
                     <img src="images/10-zlatnih-pravila-za-opremanje-doma-naslovna.webp" loading="lazy" decoding="async"
                         alt="Opremanje doma 10 zlatnih pravila za nastavak citanja">
                     <div>
@@ -393,7 +393,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="related-m">
+                <div class="related-xl">
                     <img src="images/vodic-za-renoviranje-kupatila-u-2023-godini-naslovna.webp" loading="lazy"
                         decoding="async" alt="Najbolji vodič za renoviranje kupatila u 2023. godini za dalje citanje">
                     <div>
@@ -404,7 +404,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="related-m">
+                <div class="related-xl">
                     <img src="images/sve-sto-treba-da-znate-o-pripremi-stana-za-iznajmljivanje-naslovna.webp"
                         loading="lazy" decoding="async" alt="Sve što treba da znate o pripremi stana
                         za iznajmljivanje za nastavak citanja">
@@ -418,7 +418,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="related-m">
+                <div class="related-xl">
                     <img src="images/kako-pravilno-opremiti-svoj-dom-naslovna.webp" loading="lazy" decoding="async"
                         alt="Kako pravilno opremiti svoj dom za nastavak citanja">
                     <div>
