--- a/kako-pravilno-opremiti-svoj-dom.html
+++ b/kako-pravilno-opremiti-svoj-dom.html
@@ -373,7 +373,7 @@
 
             <section class="read-more">
                 <h3>Povezani članci:</h3>
-                <div class="related-m">
+                <div class="related-xl">
                     <img src="images/sve-sto-treba-da-znate-o-pripremi-stana-za-iznajmljivanje-naslovna.webp"
                         loading="lazy" decoding="async" alt="Sve što treba da znate o pripremi stana
                         za iznajmljivanje za nastavak citanja">
@@ -387,7 +387,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="related-m">
+                <div class="related-xl">
                     <img src="images/10-zlatnih-pravila-za-opremanje-doma-naslovna.webp" loading="lazy" decoding="async"
                         alt="Opremanje doma 10 zlatnih pravila za nastavak citanja">
                     <div>
