--- a/kuca.html
+++ b/kuca.html
@@ -148,6 +148,24 @@
             <a class="main-button" href="kako-pravilno-opremiti-svoj-dom.html">Pročitaj članak</a>
         </div>
 
+        <!-- 5 -->
+        <div class="related-xxl">
+            <strong>Obezbeđenje objekta: Kako zaštititi vaš dom</strong>
+            <div class="meta">
+                <span>Ažuriran 15 Jula, 2023</span>
+                <span>sredikucu.rs</span>
+                <span>Kuća</span>
+            </div>
+            <img src="images/obezbedjenje-objekta-kako-zastititi-vas-dom-naslovna.webp" decoding="async" loading="lazy"
+                alt="Obezbeđenje objekta: Kako zaštititi vaš dom sve što treba da znate">
+            <p>
+                Bezbednost doma je od suštinskog značaja za sve nas. Osećaj sigurnosti u sopstvenom domu je osnovni
+                uslov za miran i zadovoljan život. U ovom blogu istražujemo ključne metode i savete kako biste osigurali
+                vaš dom i zaštitili ga od potencijalnih pretnji.
+            </p>
+            <a class="main-button" href="obezbedjenje-objekta-kako-zastititi-vas-dom.html">Pročitaj članak</a>
+        </div>
+
     </main>
     <footer class="author-box">
         <div class="grid-container">
