--- a/stan.html
+++ b/stan.html
@@ -146,6 +146,28 @@
             <a class="main-button" href="kako-da-kreirate-udoban-i-prijatan-dnevni-boravak.html">Pročitaj članak</a>
         </div>
 
+        <!-- 4 -->
+        <div class="related-xxl">
+            <strong>Kako opremiti garsonjeru</strong>
+            <div class="meta">
+                <span>Ažuriran 14 Jula, 2023</span>
+                <span>sredikucu.rs</span>
+                <span>Stan</span>
+            </div>
+            <img src="images/kako-opremiti-garsonjeru-naslovna.webp" decoding="async" loading="lazy"
+                alt="Kako opremiti garsonjeru">
+            <p>
+                Uređenje garsonjere može biti izazovan zadatak, ali uz pažljivo planiranje i kreativnost,
+                mali prostor možete pretvoriti u udoban i funkcionalan dom. Kako biste postigli
+                optimalan raspored nameštaja, važno je pažljivo izmeriti prostor i razmotriti vertikalni
+                prostor. Odabir multifunkcionalnog i estetski privlačnog nameštaja prilagođenog vašem
+                stilu života ključan je korak ka stvaranju idealnog okruženja. Dodavanjem ličnih dodira i
+                pažljivim dekorisanjem, vaša garsonjera će postati jedinstvena oaza koja odiše toplinom
+                i udobnošću.
+            </p>
+            <a class="main-button" href="kako-opremiti-garsonjeru.html">Pročitaj članak</a>
+        </div>
+
     </main>
     <footer class="author-box">
         <div class="grid-container">
