--- a/vodic-za-renoviranje-kupatila-u-2023-godini.html
+++ b/vodic-za-renoviranje-kupatila-u-2023-godini.html
@@ -415,7 +415,7 @@
 
             <section class="read-more">
                 <h3>Povezani članci:</h3>
-                <div class="related-m">
+                <div class="related-xl">
                     <img src="images/kako-pravilno-opremiti-svoj-dom-naslovna.webp" loading="lazy" decoding="async"
                         alt="Kako pravilno opremiti svoj dom za nastavak citanja">
                     <div>
@@ -427,7 +427,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="related-m">
+                <div class="related-xl">
                     <img src="images/kako-da-kreirate-udoban-i-prijatan-dnevni-boravak-naslovna.webp" loading="lazy"
                         decoding="async" alt="Kako da kreirate udoban i prijatan dnevni boravak za nastavak citanja">
                     <div>
