--- a/10-zlatnih-pravila-za-opremanje-doma.html
+++ b/10-zlatnih-pravila-za-opremanje-doma.html
@@ -782,7 +782,7 @@
 
             <section class="read-more">
                 <h3>Povezani članci:</h3>
-                <div class="related-m">
+                <div class="related-xl">
                     <img src="images/vodic-za-renoviranje-kupatila-u-2023-godini-naslovna.webp" loading="lazy"
                         decoding="async"
                         alt="Vodic za renoviranje kupatila u 2023. godini za pocetnike za nastavak citanja">
@@ -795,7 +795,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="related-m">
+                <div class="related-xl">
                     <img src="images/kako-pravilno-opremiti-svoj-dom-naslovna.webp" loading="lazy" decoding="async"
                         alt="Kako pravilno opremiti svoj dom za nastavak citanja">
                     <div>
@@ -807,7 +807,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="related-m">
+                <div class="related-xl">
                     <img src="images/sve-sto-treba-da-znate-o-pripremi-stana-za-iznajmljivanje-naslovna.webp"
                         loading="lazy" decoding="async" alt="Sve što treba da znate o pripremi stana
                         za iznajmljivanje za nastavak citanja">
@@ -822,7 +822,7 @@
                     </div>
                 </div>
 
-                <div class="related-m">
+                <div class="related-xl">
                     <img src="images/kako-da-kreirate-udoban-i-prijatan-dnevni-boravak-naslovna.webp" loading="lazy"
                         decoding="async" alt="Kako da kreirate udoban i prijatan dnevni boravak za nastavak citanja">
                     <div>
