--- a/sve-sto-treba-da-znate-o-pripremi-stana-za-iznajmljivanje.html
+++ b/sve-sto-treba-da-znate-o-pripremi-stana-za-iznajmljivanje.html
@@ -465,7 +465,7 @@
 
             <section class="read-more">
                 <h3>Povezani članci:</h3>
-                <div class="related-m">
+                <div class="related-xl">
                     <img src="images/kako-pravilno-opremiti-svoj-dom-naslovna.webp" loading="lazy" decoding="async"
                         alt="Kako pravilno opremiti svoj dom za nastavak citanja">
                     <div>
@@ -474,6 +474,18 @@
                         <p>
                             Opremanje doma predstavlja ključan korak u stvaranju savršene oaze za vas i vašu
                             porodicu.
+                        </p>
+                    </div>
+                </div>
+                <div class="related-xl">
+                    <img src="images/kako-da-kreirate-udoban-i-prijatan-dnevni-boravak-naslovna.webp" loading="lazy"
+                        decoding="async" alt="Kako da kreirate udoban i prijatan dnevni boravak za nastavak citanja">
+                    <div>
+                        <strong><a href="kako-da-kreirate-udoban-i-prijatan-dnevni-boravak.html">Kako da
+                                kreirate udoban i prijatan dnevni boravak</a></strong>
+                        <p>
+                            Dnevni boravak predstavlja srce svakog doma - mesto gde se okupljamo sa porodicom i
+                            prijateljima, gde se opuštamo i uživamo u slobodnom vremenu.
                         </p>
                     </div>
                 </div>
