style: Style changes

--- a/404.html
+++ b/404.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SrediKucu</title>
-    <link rel="stylesheet" type="text/css" href="styles.css" /> 
+    <title>SrediKucu - 404</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
+
 <body>
-    <div class="container">
+    <main class="not-found">
+        <h1>Stranica nije pronađena</h1>
         <div class="gif-container">
-            <img src="giphy.gif"/>
+            <img src="images/giphy.gif" />
         </div>
         <div>
             <p>Ova stranica je bila toliko dobra da je neko odlucio da je pojede. Nadamo se da mu je bilo ukusno.</p>
+            <a href="index.html">Povratak na početnu stranu</a>
         </div>
-    </div>
+    </main>
 </body>
+
 </html>
